--- a/xjtu_beamer.sty
+++ b/xjtu_beamer.sty
@@ -37,7 +37,7 @@
       \hfill%
       {\usebeamerfont{subtitle in head/foot}\insertshortsubtitle}%
       \hfill%
-      {\usebeamerfont{frame number}\usebeamercolor[fg]{frame number}\insertpagenumber~\frameofframes~\inserttotalframenumber}
+      {\usebeamerfont{frame number}\usebeamercolor[fg]{frame number}\insertframenumber~\frameofframes~\inserttotalframenumber}
     \end{beamercolorbox}%
     
     \begin{beamercolorbox}[colsep=1.5pt]{lower separation line foot}
