--- a/slide.tex
+++ b/slide.tex
@@ -240,7 +240,7 @@
 
 % ------ References ------ %
 
-\section{References}
+\section{REFERENCES}
 
 \begin{frame}[allowframebreaks] % auto break frames
     \bibliography{ref}
