--- a/slide.tex
+++ b/slide.tex
@@ -1,5 +1,5 @@
 %%% Xi'an Jiaotong University presentation beamer template
-%%% modified from UU_beamer v2.0 by King-Siong Si, Institute of Multimedia Knowledge Fusion and Engineering, Xi'an Jiaotong University
+%%% modified from UU_beamer v2.0 by King-Siong Si, Institute of Multimedia Knowledge Fusion and Engineering, Xi'an JiaoTong University
 
 \documentclass{beamer}
 
@@ -238,14 +238,16 @@
     \end{figure}
 \end{frame}
 
-% ------ References ------ %
+% ------ REFERENCES ------ %
 
-\section{REFERENCES}
+\section{References}
 
 \begin{frame}[allowframebreaks] % auto break frames
     \bibliography{ref}
     \tiny\bibliographystyle{plain}
 \end{frame}
+
+\section*{Thanks}
 
 \begin{frame}
     \begin{center}
