--- a/ref.bib
+++ b/ref.bib
@@ -5,3 +5,11 @@
   volume={30},
   year={2017}
 }
+
+@inproceedings{ding2021repvgg,
+  title={Repvgg: Making vgg-style convnets great again},
+  author={Ding, Xiaohan and Zhang, Xiangyu and Ma, Ningning and Han, Jungong and Ding, Guiguang and Sun, Jian},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={13733--13742},
+  year={2021}
+}
