use classic motto as background

--- a/slide.tex
+++ b/slide.tex
@@ -68,7 +68,7 @@
 {\href{mailto:sjsinx@stu.xjtu.edu.cn}{\textit{sjsinx@stu.xjtu.edu.cn}}}
 
 \author[K. Si, \contact]{\href{}{King-Siong Si}}
-\institute[IMKFE, XJTU]{\href{}{Institute of Multimedia Knowledge Fusion and Engineering,\\ Xi'an Jiaotong University}
+\institute[IMKFE, XJTU]{\href{}{Institute of Multimedia Knowledge Fusion and Engineering,\\ Xi'an JiaoTong University}
     \\ \smallskip \contact}
 \title[beamer]{how to make a presentation}
 % \subtitle{subtitle}
