--- a/xjtu_beamer.sty
+++ b/xjtu_beamer.sty
@@ -102,8 +102,8 @@
 \usebackgroundtemplate{
     \begin{tikzpicture}[overlay,remember picture]
         % Background picture
-        \node[at=(current page.north east),anchor=north east,inner sep=0pt,outer sep=0pt] {
-            \includegraphics[keepaspectratio,height=0.5\paperheight]{style/xjtu_logo_bg.png}};
+        \node[at=(current page.north east),anchor=north east,inner sep=0pt,outer sep=0pt, fill opacity=.7] {
+            \includegraphics[keepaspectratio,height=0.5\paperheight]{style/xjtu_classic_motto_crop.png}};
     \end{tikzpicture}
 }
 
