use motto at page thanks

--- a/xjtu_beamer.sty
+++ b/xjtu_beamer.sty
@@ -56,6 +56,7 @@
 \setbeamerfont{footnote}{size=\tiny}
 \setbeamertemplate{bibliography item}[text]
 \setbeamertemplate{caption}[numbered]
+% \setbeamertemplate{title page}[default][rounded=true, shadow=true]
 
 \setbeamercolor{palette primary}{use=structure,fg=white,bg=structure.fg}
 \setbeamercolor{palette secondary}{use=structure,fg=white,bg=structure.fg!75!black}
