--- a/slide.tex
+++ b/slide.tex
@@ -258,10 +258,24 @@
 
 \section*{Thanks}
 
+{
+\usebackgroundtemplate{
+    \begin{tikzpicture}[overlay,remember picture]
+        % Background picture
+        \node[at=(current page.center),anchor=center,inner sep=0pt,outer sep=0pt, fill opacity=0.36] {
+            \includegraphics[keepaspectratio,height=0.5\paperheight]{style/xjtu_motto_origin.png}};
+    \end{tikzpicture}
+}
 \begin{frame}
-    \begin{center}
-        \Huge \textsc{Thanks!}
-    \end{center}
+    % \begin{center}
+    %     \Huge \textsc{Thanks!}
+    % \end{center}
+    \begin{tikzpicture}[overlay,remember picture]
+        % Background picture
+        \node[at=(current page.center),anchor=center,inner sep=0pt,outer sep=0pt] 
+        {\Huge \textsc{Thanks!}};
+    \end{tikzpicture}
 \end{frame}
+}
 
 \end{document}
