--- a/slide.tex
+++ b/slide.tex
@@ -255,7 +255,7 @@
         \item 欲買桂花同載酒，終不似，少年遊。---《唐多令》
         \item 昨夜西風凋碧樹，獨上高樓，望盡天涯路。---《蝶戀花》
         \item 衣帶漸寬終不悔，為伊消得人憔悴。---《鳳棲梧》
-        \item 暮然回首，那人卻在燈火闌珊處。---《青玉案》
+        \item 驀然回首，那人卻在燈火闌珊處。---《青玉案》
         \item 精勤求學，敦篤勵志，果毅力行，忠恕任事。\\---西安交通大學校訓
         \item 嚴、正、勤、實。---養正中學校訓
     \end{itemize}
@@ -275,7 +275,7 @@
             \item 欲买桂花同载酒，终不似，少年游。---《唐多令》
             \item 昨夜西风凋碧树，独上高楼，望尽天涯路。---《蝶恋花》
             \item 衣带渐宽终不悔，为伊消得人憔悴。---《凤栖梧》
-            \item 暮然回首，那人却在灯火阑珊处。---《青玉案》
+            \item 蓦然回首，那人却在灯火阑珊处。---《青玉案》
             \item 精勤求学，敦笃励志，果毅力行，忠恕任事。\\---西安交通大学校训
             \item 严、正、勤、实。---养正中学校训
         \end{itemize}
