--- a/slide.tex
+++ b/slide.tex
@@ -1,5 +1,22 @@
-%%% Xi'an Jiaotong University presentation beamer template
-%%% modified from UU_beamer v2.0 by King-Siong Si, Institute of Multimedia Knowledge Fusion and Engineering, Xi'an JiaoTong University
+%% slide.tex
+%% Copyright 2024 King-Siong Si
+%
+% Xi'an Jiaotong University presentation beamer template
+% modified from UU_beamer v2.0 by King-Siong Si, Institute of Multimedia Knowledge Fusion and Engineering, Xi'an JiaoTong University
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   https://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions of LaTeX
+% version 2008 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+% 
+% The Current Maintainer of this work is King-Siong Si
+%
+% This work consists of the files `slide.tex' and `xjtu_beamer.sty'.
 
 \documentclass{beamer}
 
