update, change institude

--- a/slide.tex
+++ b/slide.tex
@@ -59,7 +59,7 @@
 \def\cmd#1{\texttt{\color{red}\footnotesize $\backslash$#1}}
 \def\env#1{\texttt{\color{blue}\footnotesize #1}}
 
-\newcommand{\hl}[1]{\textcolor{uppsalared}{#1}} % highlight
+\newcommand{\hl}[1]{\textcolor{xjtured}{#1}} % highlight
 %%% to avoid footnote rule from showing too early when using overalys. 
 %%% ugly, but it works. 
 %%% this method comes from https://tex.stackexchange.com/questions/518750/beamer-how-to-make-footnote-rule-appear-later-pause.
@@ -103,7 +103,7 @@
 {\href{mailto:sjsinx@stu.xjtu.edu.cn}{\textit{sjsinx@stu.xjtu.edu.cn}}}
 
 \author[K. Si, \contact]{\href{}{King-Siong Si}}
-\institute[IMKFE, XJTU]{\href{}{Institute of Multimedia Knowledge Fusion and Engineering,\\ Xi'an JiaoTong University}
+\institute[SCST, XJTU]{\href{}{School of Computer Science and Technology, \\ Xi'an JiaoTong University}
     \\ \smallskip \contact}
 \title[beamer]{how to make a presentation}
 % \subtitle{subtitle}
