--- a/xjtu_beamer.sty
+++ b/xjtu_beamer.sty
@@ -47,11 +47,10 @@
 
 \useinnertheme{circles}
 
-\xdefinecolor{uppsalared}{RGB}{151,31,48}
-\xdefinecolor{xjtured}{RGB}{200,22,30} % this color is awful...
-\setbeamercolor{footline}{bg=uppsalared}
-\setbeamercolor{frametitle}{bg=uppsalared,fg=white}
-\setbeamercolor{title}{bg=uppsalared}
+\xdefinecolor{xjtured}{RGB}{151,31,48}
+\setbeamercolor{footline}{bg=xjtured}
+\setbeamercolor{frametitle}{bg=xjtured,fg=white}
+\setbeamercolor{title}{bg=xjtured}
 \setbeamerfont{frametitle}{size=\large}
 \setbeamerfont{footnote}{size=\tiny}
 \setbeamertemplate{bibliography item}[text]
@@ -64,8 +63,8 @@
 \setbeamercolor{palette quaternary}{fg=white,bg=structure.fg!50!black}
 \setbeamercolor{titlelike}{parent=palette primary}
 
-\setbeamercolor{block title}{bg=uppsalared,fg=white}
-\setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=uppsalared}
+\setbeamercolor{block title}{bg=xjtured,fg=white}
+\setbeamercolor*{block title example}{use={normal text,example text},bg=white,fg=xjtured}
 \setbeamertemplate{blocks}[rounded][shadow=true]
 
 \setbeamercolor{fine separation line}{}
@@ -77,9 +76,9 @@
 \setbeamercolor{section in sidebar}{fg=brown}
 \setbeamercolor{section in sidebar shaded}{fg=grey}
 \setbeamercolor{separation line}{}
-\setbeamercolor{sidebar}{bg=uppsalared}
+\setbeamercolor{sidebar}{bg=xjtured}
 \setbeamercolor{sidebar}{parent=palette primary}
-\setbeamercolor{structure}{fg=uppsalared}
+\setbeamercolor{structure}{fg=xjtured}
 \setbeamercolor{subsection in sidebar}{fg=brown}
 \setbeamercolor{subsection in sidebar shaded}{fg=grey}
 
