change ``thanks'' style

--- a/slide.tex
+++ b/slide.tex
@@ -330,7 +330,7 @@
     \tiny\bibliographystyle{plain}
 \end{frame}
 
-\section*{Thanks}
+\appendix
 
 {
 % use Le-Su motto in the last slide
@@ -341,6 +341,9 @@
             \includegraphics[keepaspectratio,height=.8\paperheight]{style/xjtu_motto_origin.png}};
     \end{tikzpicture}
 }
+
+\setbeamercolor{section in head/foot}{use=palette tertiary, fg=palette tertiary.bg}
+\setbeamercolor{subsection in head/foot}{use=palette secondary, fg=palette secondary.bg} 
     
 \begin{frame}
     \begin{tikzpicture}[overlay,remember picture]
